Closed Bug 589871 Opened 15 years ago Closed 15 years ago

Fix GetValidationmessage warnings in content/html/content/src/

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b7

People

(Reporter: mounir, Assigned: Ms2ger)

Details

(Whiteboard: [good first bug])

Attachments

(1 file, 1 obsolete file)

There are some warnings because there is nsIConstraintValidation::GetValidationMessage and nsHTML<Foo>Element::GetValidationMessage. The later hide the former. That's what we want but 'use' should be used to get ride of compiler warnings. I will do that after beta5 if no one jump on it in the mean time.
Attached patch Patch v1 (obsolete) — Splinter Review
Assignee: nobody → Ms2ger
Status: NEW → ASSIGNED
Attachment #468393 - Flags: review?(Olli.Pettay)
Comment on attachment 468393 [details] [diff] [review] Patch v1 >From: Ms2ger <ms2ger@gmail.com> > >diff --git a/content/html/content/src/nsHTMLButtonElement.cpp b/content/html/content/src/nsHTMLButtonElement.cpp >--- a/content/html/content/src/nsHTMLButtonElement.cpp >+++ b/content/html/content/src/nsHTMLButtonElement.cpp >@@ -77,16 +77,18 @@ static const nsAttrValue::EnumTable kBut > // Default type is 'submit'. > static const nsAttrValue::EnumTable* kButtonDefaultType = &kButtonTypeTable[2]; > > class nsHTMLButtonElement : public nsGenericHTMLFormElement, > public nsIDOMHTMLButtonElement, > public nsIConstraintValidation > { > public: >+ using nsIConstraintValidation::GetValidationMessage; Why using nsIConstraintValidation?
Ms2ger, could you answer to Mounir's question?
Attachment #468393 - Flags: review?(Olli.Pettay) → review+
Comment on attachment 468393 [details] [diff] [review] Patch v1 Thanks. (FTR, I talked about this bug with Mounir on IRC a while ago; I understood he was fine with it too after that.)
Attachment #468393 - Flags: approval2.0?
Attachment #468393 - Flags: approval2.0? → approval2.0+
Thanks.
Attachment #468393 - Attachment is obsolete: true
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b6
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: