Bug 589871 - Fix GetValidationmessage warnings; r=Olli.Pettay approval2.0=jst